sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:27: error: ')' expected but ';' found.
      copy(indSorted-i*gap,indSorted-gap*(i-1);
                                              ^